--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/reactstrap": "^8.5.0",
     "concurrently": "^5.3.0",
     "node-sass": "^4.14.1",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.2",
@@ -30,7 +31,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
