--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/reactstrap": "^8.5.0",
     "concurrently": "^5.3.0",
+    "next": "^9.5.3",
     "node-sass": "^4.14.1",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
@@ -21,22 +22,18 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "next start",
+    "build": "next build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "compile:sass": "node-sass src/sass/main.scss src/index.css -w",
-    "dev": "concurrently \"yarn start\" \"yarn compile:sass\""
+    "dev": "concurrently \"next dev\" \"yarn compile:sass\""
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
