--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@next/bundle-analyzer": "^11.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/reactstrap": "^8.5.0",
     "concurrently": "^5.3.0",
+    "gsap": "^3.7.1",
     "next": "^9.5.3",
     "node-sass": "^4.14.1",
     "ramda": "^0.27.1",
@@ -22,6 +24,7 @@
   },
   "scripts": {
     "start": "next start",
+    "analyze": "ANALYZE=true yarn build",
     "build": "next build && next export",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
