--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.13",
-    "@types/react-dom": "^16.9.0",
-    "@types/reactstrap": "^8.5.0",
     "concurrently": "^5.3.0",
     "gsap": "^3.7.1",
     "next": "^9.5.3",
@@ -19,8 +14,7 @@
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2",
-    "typescript": "~3.7.2"
+    "react-scripts": "3.4.2"
   },
   "scripts": {
     "start": "next start",
